--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
   google_sign_in: ^6.1.5
+  cached_network_image: ^3.3.1
+  video_player: ^2.8.2
 
 dev_dependencies:
   flutter_test:
