--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,19 @@ dependencies:
   firebase_core: ^3.15.2
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
+  firebase_storage: ^12.3.0
   google_sign_in: ^6.1.5
   cached_network_image: ^3.3.1
   video_player: ^2.8.2
+  file_picker: ^8.0.0+1
+  path: ^1.9.0
+  http: ^1.2.2
+  path_provider: ^2.1.4
+  photo_view: ^0.15.0
+  flutter_pdfview: ^1.3.2
+  flutter_windowmanager: ^0.2.0
+  screen_protector: ^1.4.2+1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
