--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   path_provider: ^2.1.4
   photo_view: ^0.15.0
   flutter_pdfview: ^1.3.2
-  flutter_windowmanager: ^0.2.0
+  # flutter_windowmanager: ^0.2.0
   screen_protector: ^1.4.2+1
   url_launcher: ^6.3.0
 
