--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 kotlin.compiler.execution.strategy=in-process
 kotlin.daemon.jvm.options=-Xmx2048m
+org.gradle.java.home=C:/Program Files/Microsoft/jdk-17.0.15.6-hotspot/
