--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # flutter_windowmanager: ^0.2.0
   screen_protector: ^1.4.2+1
   url_launcher: ^6.3.0
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_test:
